--- a/src/components/templates/Logo.css
+++ b/src/components/templates/Logo.css
@@ -10,3 +10,9 @@ aside.logo img {
     width: 100%; /* ocupe 100% do espaço, caso a logo for maior, ela vai se alinhar ao espaço disponivel */
     /* dica: caso a logo for muito horizontal, pode-se mudar a variavel --logo-height */
 }
+
+@media(mex-width: 576px) {
+    aside.logo img {
+        width: 350px;
+    }
+}
